Added Sesame to Kiln as another webapp.